paperless-ngx/smb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-server
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba-server
  template:
    metadata:
      labels:
        app: samba-server
    spec:
      containers:
      - name: samba-server
        image: dockurr/samba:4.22.6
        ports:
        - containerPort: 445
        resources:
          requests:
            cpu: 256m
            memory: 512Mi
          limits:
            cpu: 256m
            memory: 512Mi
        volumeMounts:
        - name: consumption
          mountPath: /storage
        readinessProbe:
          tcpSocket:
            port: 445
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 445
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: consumption
        persistentVolumeClaim:
          claimName: paperless-ngx-consumption

---
apiVersion: v1
kind: Service
metadata:
  name: samba-server
  namespace: paperless-ngx
spec:
  selector:
    app: samba-server
  ports:
    - protocol: TCP
      port: 445
      targetPort: 445
  type: LoadBalancer
  externalTrafficPolicy: Local
