paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
spec:
  tls:
    - hosts:
        - paperless.paulus.family
      secretName: paperless-paulus-family-cert
  rules:
    - host: paperless.paulus.family
      http: &rules
        paths:
          - backend:
              service:
                name: paperless-ngx
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: inject-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ext
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web-mtls
    traefik.ingress.kubernetes.io/router.middlewares: paperless-ngx-inject-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - paperless.paulus.family
      secretName: paperless-paulus-family-cert
  rules:
    - host: paperless.paulus.family
      http:
        paths:
          - backend:
              service:
                name: paperless-ngx
                port:
                  number: 80
            path: /
            pathType: Prefix
